Replace number with valueOf and fixed date format sync issues
git-svn-id: https://svn.kuali.org/repos/student/brms/branches/brms-dev@10629 0ac02d80-fb3f-11dc-a574-c57244a850eb